# test-task-api

./: .dockerignore  .env  Dockerfile  README.md  db_client.py  docker-compose.yml  main.py  models.py  pyproject.toml  test_main.py
FastAPI/: main.py  pyproject.toml  test_main.py
db/: data.db
